Fri Aug 21 17:12:39 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* file.c, include/ruby/intern.h (rb_str_conv_for_path): new function
	  to convert encoding for pathname.

	* io.c (rb_sysopen): use above function.

	* dir.c (dir_chdir, dir_s_chroot, dir_s_mkdir, dir_s_rmdir): ditto.

	* win32/win32.c, include/ruby/win32.h (rb_w32_wmkdir): new function
	  to make directory with WCHAR pathname.

Fri Aug 21 15:13:08 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* include/ruby/io.h, io.c (FMODE_SETENC_BY_BOM):
	  renamed from FMODE_STRIP_BOM.

Thu Aug 20 01:24:55 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c (rb_io_fmode_modestr): change modestr syntax for BOM
	  to "BOM|UTF-*". [ruby-dev:39106]

	* io.c (parse_mode_enc): ditto.

Fri Aug 21 15:01:35 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/readline/readline.c (readline_readline): use rb_prep_terminal
	  only on Windows.

Fri Aug 21 07:25:45 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rdoc/ri/gemdirs.rb: split from lib/rdoc/ri/paths.rb to ge
	  rid of loading rubygems and searching all gems always.

Fri Aug 21 07:14:52 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_PROGRAM_VERSION, RUBY_RELEASE_DATE): extracts
	  from version.h for cross-compiling.

	* template/fake.rb.in (RUBY_VERSION, RUBY_DESCRIPTION): use above.

Fri Aug 21 00:08:01 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rdoc/ri/paths.rb (RDoc::RI::Paths): Gem::Enable has been obsolete.

Thu Aug 20 23:56:15 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_sysopen): moved sysopen_struct from rb_sysopen_internal.

Thu Aug 20 23:39:51 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* parse.y (reduce_nodes_gen): preserve NODE_FL_NEWLINE flag during
	  node reducing.  [ruby-core:24463]

Thu Aug 20 14:39:47 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/readline/readline.c (readline_get): add rl_prep_terminal(1).
	  insited by jitte [ruby-list:43546]

Thu Aug 20 12:09:01 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>