@@ -1,3 +1,8 @@
+Wed Aug 26 13:19:41 2009  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* file.c (rb_str_conv_for_path): should check necessity of converting
+	  encoding on Max OS X.
+
 Fri Aug 21 17:12:39 2009  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* file.c, include/ruby/intern.h (rb_str_conv_for_path): new function
